# Agent-Arena

./: README.md
backend/: pyproject.toml  railway.toml  requirements.txt
backend/sandbox/: Dockerfile.universal  app.py
backend/sandbox/config/: logging_config.py
backend/sandbox/executor/: sandbox.py
backend/src/: celery_app.py  main.py
backend/src/api/: routes.py
backend/src/api/v1/agents/: code.py  context.py  orchestrate.py  plan.py
backend/src/api/v1/arena/: arena.py
backend/src/api/v1/insights/: funnel.py  llm.py
backend/src/api/v1/repo/: create_issue.py  embed.py  issue.py  repo_preview.py  token.py
backend/src/core/: config.py  logging.py
backend/src/models/: validate_token.py
backend/src/schemas/request/: issue.py
backend/src/schemas/request/agents/: context.py  orchestrate.py  plan.py
backend/src/schemas/request/arena/: arena.py
backend/src/schemas/request/repo/: create_issue.py  embed.py  token.py
backend/src/schemas/response/: issue.py  token.py
backend/src/schemas/response/agents/: context.py  orchestrate.py  plan.py
backend/src/schemas/response/arena/: arena.py
backend/src/services/agents/: context.py  plan.py
backend/src/services/graph/: __init__.py  builder.py  state.py
backend/src/services/observability/: posthog_client.py  tracking.py
backend/src/services/repo/: embed.py  issue.py  token.py
backend/src/services/tools/: __init__.py  code.py  context.py  create_pr.py  plan.py  test.py
backend/src/tasks/: __init__.py  code.py  orchestrate.py  state.py
backend/src/tasks/tool/: create_pr.py
(+37 files in other folders)
